# Loglens

./: .SRCINFO  .gitignore  AUR_README.md  ISSUE_RESOLUTION.md  PHASE1_SUMMARY.md  PHASE2_README.md  PHASE2_SUMMARY.md  PKGBUILD  README.md  demo.py  diagnose.py  example.py  logtui.py  pyproject.toml  requirements.txt  setup.py  verify.py  verify_tui.py
loglens/: __init__.py  engine.py  filtering.py  model.py  normalize.py  severity.py
loglens/sources/: __init__.py  base.py  file.py  journalctl.py  registry.py
loglens/tui/: __init__.py  app.css  app.py  backend.py  state.py
loglens/tui/screens/: __init__.py  main.py
tests/: conftest.py  test_engine.py  test_filtering.py  test_normalize.py  test_registry.py  test_severity.py
